# training_tracker_fastapi

./: .gitignore  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 1c6d9c00126b_updated_default_training_status.py  b210a0b49012_update_default_values.py  e10ed610c0f6_create_main_tables.py
training_tracker/: config.py  database.py  main.py  security.py
training_tracker/models/: schemas.py
training_tracker/routers/: distances.py  exercises.py  groups.py  sets.py  trainings.py  users.py  weights.py
training_tracker/tests/: conftest.py  helpers.py  test_security.py
training_tracker/tests/routers/: test_distances.py  test_exercises.py  test_groups.py  test_sets.py  test_trainings.py  test_users.py  test_weights.py
