[tool.poetry]
name = "training-tracker-fastapi"
version = "0.1.0"
description = ""
authors = ["Maryia Afanasyeva <masha.afanaseva0192@gmail.com>"]
readme = "README.md"
packages = [{include = "training_tracker_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
asyncpg = "^0.29.0"
sqlalchemy = "1.4.42"
databases = "^0.8.0"
pydantic-settings = "^2.1.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
uvicorn = "^0.25.0"
python-dotenv = "^1.0.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
black = "^23.12.1"
isort = "^5.13.2"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
